# embedded_libraries

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
crates/ahrs/: Cargo.toml  README.md
crates/ahrs/examples/: complementary_filter.rs
crates/ahrs/src/: complementary.rs  lib.rs  traits.rs
crates/airframe/: Cargo.toml  README.md  build.rs
crates/airframe/examples/: README.md  elevon_attitude_hold.rs  elrs_attitude_hold_pipeline.rs  indi_attitude_hold_pipeline.rs  rp235x_elrs_imu_attitude_hold.rs  vtail_attitude_hold.rs
crates/airframe/examples/rp235x_elrs_imu_attitude_hold/: embedded_main.rs  support.rs
crates/airframe/src/: input.rs  lib.rs
crates/airframe/src/fixed_wing/: backend.rs  common.rs  conventional.rs  elevon.rs  mod.rs  tests.rs  vtail.rs
crates/control/: Cargo.toml  README.md
crates/control/examples/: README.md  fixed_wing_actuation.rs
crates/control/src/: input.rs  lib.rs  pid.rs
crates/elrs/: Cargo.toml  README.md
crates/elrs/examples/: README.md  crsf_uart_parser.rs  rc_frame_encode.rs  rp235x_crsf_uart_rx.rs  rp235x_crsf_uart_tx.rs
crates/elrs/src/: address.rs  command.rs  crc.rs  lib.rs  msp.rs
crates/eskf/: Cargo.toml  README.md
crates/eskf/examples/: inertial_fusion.rs
crates/eskf/src/: lib.rs
crates/imu/: Cargo.toml  README.md
crates/imu/examples/: README.md  marg_estimation.rs  rp235x_stemma_qt_9dof.rs
crates/imu/src/: bus.rs  estimation.rs  lib.rs  sample.rs  traits.rs
crates/indi/: Cargo.toml  README.md
crates/indi/examples/: control_allocation.rs  rate_control.rs
crates/indi/src/: allocation.rs  attitude.rs  axis.rs  filter.rs  lib.rs  rate.rs  tests.rs
crates/kinematics/: Cargo.toml  README.md
crates/kinematics/examples/: motion_models.rs
crates/kinematics/src/: fixed_wing.rs  lib.rs  state.rs  types.rs
crates/lis3mdl/: Cargo.toml  README.md
crates/lis3mdl/examples/: README.md  read_magnetic_field.rs
crates/lis3mdl/src/: device.rs  lib.rs  registers.rs  tests.rs  types.rs
crates/lps25hb/: Cargo.toml  README.md  build.rs
crates/lps25hb/examples/: read_pressure.rs  read_pressure_spi.rs  rp235x_i2c_lps25hb.rs  rp235x_spi_lps25hb.rs
crates/lps25hb/src/: i2c.rs  interface.rs  lib.rs  registers.rs  spi.rs  types.rs
crates/lps25hb/src/device/: conversion.rs  driver.rs  mod.rs  tests.rs
crates/madgwick/: Cargo.toml  README.md
crates/madgwick/examples/: attitude_from_marg.rs
crates/madgwick/src/: filter.rs  lib.rs
crates/math/: Cargo.toml  README.md
crates/math/examples/: getting_started.rs
crates/math/src/: angle.rs  lib.rs  linalg.rs  pose.rs  quat.rs  vector.rs
crates/mcp3208/: Cargo.toml  README.md
crates/mcp3208/examples/: README.md  read_voltage.rs  rp235x_spi_mcp3208.rs  rp235x_spi_mcp3208_scan_all.rs
crates/mcp3208/src/: driver.rs  lib.rs
crates/mis2500/: Cargo.toml  README.md
crates/mis2500/examples/: airspeed.rs  read_vacuum.rs
crates/mis2500/src/: adc.rs  driver.rs  error.rs  lib.rs  pressure.rs  tests.rs
crates/navigation/: Cargo.toml  README.md
crates/navigation/examples/: README.md  fixed_wing_dead_reckoning.rs  inertial_navigation.rs
crates/navigation/src/: fixed_wing.rs  inertial.rs  (+1 more)
crates/pwm/: Cargo.toml  README.md
crates/stabilization/: Cargo.toml  README.md
crates/tecs/: Cargo.toml  README.md
crates/tsd10/: Cargo.toml  README.md
crates/tsd10/examples/: read_distance.rs  rp235x_uart_tsd10.rs
crates/tsd10/src/: driver.rs  lib.rs  parser.rs  types.rs
(+58 files in other folders)
