[package]
name = "lps25hb"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
embedded-hal = { workspace = true }
libm = { workspace = true }

[target.'thumbv8m.main-none-eabihf'.dependencies]
panic-halt = "1.0"

[target.'thumbv8m.main-none-eabihf'.dependencies.rp235x-hal]
version = "0.4"
features = ["binary-info", "critical-section-impl", "rt"]
